# wsm

./: .gitignore  README.md  main.c  meson.build
common/: meson.build  wsm_common.h
compositor/: meson.build  wsm-server.c  wsm_server.c  wsm_server.h
effects/: meson.build
effects/blur/: meson.build
effects/scissors/: meson.build
gesture/: meson.build
plugins/: meson.build
plugins/remoting/: meson.build
plugins/sharing/: meson.build
protocols/: meson.build
