swm_gesture = static_library(
	'swm_gesture',
	files(
        'wsm_gesture.c',
        'wsm_gesture.h',
        'wsm_gesture_drag.c',
        'wsm_gesture_drag.h',
        'wsm_gesture_single.c',
        'wsm_gesture_single.h',
        'wsm_gesture_swipe.c',
        'wsm_gesture_swipe.h',
        'wsm_gesture_zoom.c',
        'wsm_gesture_zoom.h',
	),
	dependencies: [
        wlroots,
        server_protos,
	],
)